Remove the depcrecated newInstance way